--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -139,7 +139,7 @@
     <div class="profile-frame">
         <form method="get">
             <div class="form-left">
-                <label for="department">Select_Department:</label>
+                <label for="department">Select Department:</label>
                 <select name="department" id="department" onchange="this.form.submit()">
                     <option value="">All Departments</option>
                     {% for dept in department_data %}
@@ -149,8 +149,9 @@
                     {% endfor %}
                 </select>
             </div>
+
             <div class="form-right">
-                <label for="lecturer">Select_Lecturer:</label>
+                <label for="lecturer">Select Lecturer:</label>
                 <select name="lecturer" id="lecturer" onchange="this.form.submit()">
                     <option value="">All Lecturers</option>
                     {% for lecturer in lecturers %}
@@ -160,11 +161,17 @@
                     {% endfor %}
                 </select>
             </div>
+
             {% if selected_lecturer or selected_department %}
-                <button type="button" onclick="window.location.href='{{ url_for('admin_manageTimetable') }}'" style="padding: 4px 8px;">Clear_Filter</button>
+            <div class="clear-btn-container">
+                <button type="button" onclick="window.location.href='{{ url_for('admin_manageTimetable') }}'">
+                    Clear Filter
+                </button>
+            </div>
             {% endif %}
         </form>
     </div>
+
 
     {% set time_slots = ["07:00","08:00","09:00","10:00","11:00","12:00","13:00","14:00","15:00","16:00","17:00","18:00","19:00","20:00","21:00","22:00","23:00"] %}
 
