--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -142,7 +142,7 @@
                                     } %}
                                     <span class="status {{ remark_classes.get(att.remark, '') }}">[{{ att.remark }}]</span>
                                 {% else %}
-                                    <em class="status frame-waiting">IN PROCESSING</em>
+                                    <em class="status frame-pending">IN PROCESSING</em>
                                 {% endif %}
                             </td>
 
