--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -246,7 +246,7 @@
                         <td>{{ loop.index }}</td>
                         <td>
                             {% if row.courseStatus %}
-                                <span class="status frame-complete">
+                                <span class="status frame-completed">
                                     Activated
                                 </span>
                             {% else %}
