--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -173,7 +173,7 @@
                         <td>{{ loop.index }}</td>
                         <td>
                             {% if row.examStatus %}
-                                <span class="status frame-complete">[Activated]</span>
+                                <span class="status frame-completed">[Activated]</span>
                             {% else %}
                                 <span class="status frame-expired">[Inactivated]</span>
                             {% endif %}
