--- a/app/templates/user/userMergeTimetable.html
+++ b/app/templates/user/userMergeTimetable.html
@@ -20,7 +20,7 @@
             </select>
 
             {% if selected_lecturer %}
-                <button type="button" onclick="window.location.href='{{ url_for('user_mergeTimetable') }}'" style="margin-left: 10px; padding: 4px 8px;">
+                <button type="button" onclick="window.location.href='{{ url_for('user_mergeTimetable') }}'" style="padding: 1%; background-color: #edd5ff;">
                     Clear_Filter
                 </button>
             {% endif %}
