--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -19,7 +19,7 @@
                 </div>
                 <div class="dashboard-frame">
                     <h3>Completed Exams</h3>
-                    <p class="dashboard-text" style="color:red;">{{ exam_data|length - total_exam_activated }}</p>
+                    <p class="dashboard-text" style="color:blue;">{{ exam_data|length - total_exam_activated }}</p>
                 </div>
                 <div class="dashboard-frame">
                     <h3>Upcoming Exams</h3>
