--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -57,7 +57,7 @@
                 <tr>
                     <th>Exam ID</th>
                     <th>Exam Details</th>
-                    <th>Number of Invigilators</th>
+                    <th>Invigilators</th>
                     <th>Invigilator Details</th>
                     <th>Check-in/out Time</th>
                     <th>Attendance Status</th>
