--- a/app/static/css/admin.css
+++ b/app/static/css/admin.css
@@ -262,6 +262,8 @@ html, body {
 
 
 .calendar-container {
+    overflow: auto;
+    max-height: 700px;
     background: #f8f8f8;
     padding: 20px;
     border-radius: 10px;
