--- a/app/templates/admin/adminManageInvigilationTimetable.html
+++ b/app/templates/admin/adminManageInvigilationTimetable.html
@@ -29,16 +29,16 @@
     <div class="calendar-container">
         {% for date, exams in calendar_data.items() %}
             <div class="calendar-day">
-                <h3 class="calendar-date" data-date="{{ date.isoformat() }}">{{ date.strftime("%A, %d %B %Y") }} | <i>[Total Exams: {{ exams|length }}]</i></h3>
+                <h3 class="calendar-date" data-date="{{ date.isoformat() }}">{{ date.strftime("%A, %d %B %Y") }} | [Total Exams: {{ exams|length }}]</h3>
                 <div class="exam-grid">
                     {% for exam in exams %}
                         <div class="exam-card"
                             style="background-color: {% if exam.is_overnight %}#dc74f7{% elif exam.status %}#75bdf9{% else %}lightgrey{% endif %};">
-                            <strong>{{ exam.course_code }}</strong> - <i>{{ exam.course_name }}</i><br>
-                            <strong>Venue</strong>: {{ exam.venue }}<br>
-                            <strong>Time</strong>: {{ exam.start_time.strftime("%H:%M") }} - {{ exam.end_time.strftime("%H:%M") }}
+                            <strong>{{ exam.course_code }} - [{{ exam.course_name }}]</strong><br>
+                            <i>Venue: {{ exam.venue }}</i><br>
+                            <i>Time: {{ exam.start_time.strftime("%H:%M") }} - {{ exam.end_time.strftime("%H:%M") }}</i>
                             {% if exam.is_overnight %}
-                                <span style="font-size: 12px; color: #700;">(Overnight)</span>
+                                <span style="font-size: 12px; color: #700;"><strong>[Overnight]</strong></span>
                             {% endif %}
                         </div>
                     {% endfor %}
